# samaa-ai

./: .env.example  .gcloudignore  .gitignore  CUSTOM_DOMAIN_SETUP.md  DESIGN.md  GITHUB_SECRETS_SETUP.md  LANDING_PAGE_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  README.md  cloudbuild-api.yaml  cloudbuild-landing.yaml  cloudbuild-web.yaml  cloudbuild.yaml  deploy.sh  docker-compose.yml  ngrok.yml  package-lock.json  package.json  seed.sh  setup-gcp-infrastructure.sh  setup-gcp.sh  setup-oracle.sh  share_public.sh  start_local_pipeline.sh  start_servers.sh  turbo.json  verify-deployment.sh  verify-wif.sh
apps/api/: Dockerfile  TESTING_QUICK_REFERENCE.md  alembic.ini  process_uploaded.py  pyproject.toml  reprocess.py  reprocess_analysis.py  reprocess_one.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 14cdd47b97b4_initial_schema.py  14ff67e4c4bf_add_speaker_role_corrections.py  c3d4e5f6g7h8_add_speaker_voiceprints.py
apps/api/scripts/: check_conversations.py  check_pipeline.py  check_recordings.py  check_speaker_roles.py  configure_r2_cors.py  fix_all_recordings.py  fix_word_speaker_labels.py  reprocess_all_with_monitoring.py  reprocess_missing_scores.py  seed.py
apps/api/src/: config.py  database.py  main.py
apps/api/src/ai/: analyzer.py  diarizer.py  nvidia_client.py  pyannote_diarizer.py  scorer.py  segmenter.py  stt.py  stt_deepgram.py  vad.py  voiceprint.py
apps/api/src/api/: deps.py
apps/api/src/models/: __init__.py  brand.py  conversation.py  metrics.py  recording.py  salesperson.py  store.py  transcript.py  user.py
apps/api/src/schemas/: analytics.py  auth.py  brand.py  hierarchy.py  (+4 more)
apps/api/tests/: test_analytics_service.py  test_analyzer.py  test_api_routes.py  test_attribution.py  test_brand_service.py  test_conversation_builder.py  test_pipeline_health.py  test_pipeline_integration.py  test_segmenter.py  test_services.py  test_storage.py  test_store_service.py  test_workers.py
(+310 files in other folders)
