[project]
name = "samaa-api"
version = "0.1.0"
description = "CXSAMAA - Sales Audio Management & AI Analysis API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "pgvector>=0.3.0",
    "pydub>=0.25.1",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "pyannote.audio>=3.3.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "boto3>=1.35.0",
    "deepgram-sdk>=3.7.0",  # Fallback STT provider
    "tenacity>=8.2.0",  # Retry decorator for pipeline operations
    "google-cloud-tasks>=2.16.0",  # Cloud Tasks for pipeline orchestration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
fail_under = 30  # Minimum coverage threshold (will increase over time)
